# CiftiLib

./: .gitignore  .travis.yml  CMakeLists.txt  CiftiLib.pc.in  CiftiLibConfig.cmake.in  Doxyfile  Doxyfile.in  LICENSE  README  USAGE  mainpage.dox
Cifti/: CMakeLists.txt  CiftiBrainModelsMap.cxx  CiftiBrainModelsMap.h  CiftiFile.cxx  CiftiFile.h  CiftiLabelsMap.cxx  CiftiLabelsMap.h  CiftiMappingType.cxx  CiftiMappingType.h  CiftiParcelsMap.cxx  CiftiParcelsMap.h  CiftiScalarsMap.cxx  CiftiScalarsMap.h  CiftiSeriesMap.cxx  CiftiSeriesMap.h  CiftiVersion.cxx  CiftiVersion.h  CiftiXML.cxx  CiftiXML.h  Label.cxx  Label.h  LabelTable.cxx  LabelTable.h  MetaData.cxx  MetaData.h  StructureEnum.cxx  StructureEnum.h  VolumeSpace.cxx  VolumeSpace.h
Common/: AString.cxx  AString.h  BinaryFile.cxx  BinaryFile.h  ByteSwapping.h  CMakeLists.txt  CaretAssert.h  CiftiAssert.h  CiftiException.cxx  CiftiException.h  Compact3DLookup.h  CompactLookup.h  FloatMatrix.cxx  MathFunctions.cxx  MathFunctions.h  MatrixFunctions.h  MultiDimArray.h  Vector3D.cxx  Vector3D.h  VoxelIJK.h  XmlAdapter.cxx  XmlAdapter.h
Nifti/: CMakeLists.txt  NiftiHeader.cxx  NiftiHeader.h  NiftiIO.cxx  NiftiIO.h  nifti1.h  nifti2.h
cmake/Modules/: Findglib.cmake  Findglibmm.cmake  Findlibxml++.cmake
cmake/scripts/: testmd5.cmake
example/: CMakeLists.txt  datatype.cxx  rewrite.cxx  xmlinfo.cxx
example/data/: README
src/: CMakeLists.txt  CiftiFile.cxx  CiftiFile.h  MultiDimIterator.h  NiftiIO.cxx  NiftiIO.h
src/Cifti/: CMakeLists.txt  CiftiBrainModelsMap.cxx  CiftiBrainModelsMap.h  CiftiLabelsMap.cxx  CiftiLabelsMap.h  CiftiMappingType.cxx  CiftiMappingType.h  CiftiParcelsMap.cxx  CiftiParcelsMap.h  CiftiScalarsMap.cxx  CiftiScalarsMap.h  CiftiSeriesMap.cxx  CiftiVersion.cxx  CiftiVersion.h  CiftiXML.cxx  CiftiXML.h  Label.cxx  Label.h  LabelTable.cxx  LabelTable.h  MetaData.cxx  MetaData.h  StructureEnum.cxx  StructureEnum.h  VolumeSpace.cxx  VolumeSpace.h
src/Common/: AString.h  BinaryFile.cxx  BinaryFile.h  ByteSwapping.h  CMakeLists.txt  CiftiException.h  CiftiMutex.h  CompactLookup.h  FloatMatrix.h  MathFunctions.cxx  MathFunctions.h  XmlAdapter.h
src/Nifti/: CMakeLists.txt  NiftiHeader.cxx  NiftiHeader.h  nifti2.h
